--- a/frontend/src/pages/Dashboard/dashboard.css
+++ b/frontend/src/pages/Dashboard/dashboard.css
@@ -1,20 +1,21 @@
 ul.events-list {
-  width: 100%;
+  width: 100%;  
   list-style: none;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: inherit;
   grid-gap: 20px;
   margin-bottom: 30px;
 }
 
 ul.events-list li{
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
 }
 
 ul.events-list li header{
   width: 100%;
-  height: 220px;
+  height: 300px;
   background-size: contain;
   background-repeat: no-repeat;
   border-radius: 4px;
@@ -35,6 +36,9 @@ div.filter-panel{
 ul.event-list header div {
   display: flex;
   flex-direction: row-reverse;
+}
+.container.post{  
+  width: 350px;
 }
 
 ul.notifications {
